# Iteria

./: .gitignore  README.md  demo1.JSX  package-lock.json  package.json  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
data/docs/: doc1.txt  doc2.txt  index.txt
data/vector_db_test/: chroma.sqlite3
docs/: core-architecture.md  endpoints.md  folder-struct.md
engine/: __init__.py  models.py
engine/config/: __init__.py  prompts.py  settings.py
engine/core/: __init__.py  critic.py  engine.py  generator.py  retriever.py  rewriter.py
engine/rag/: README.md  __init__.py  embeddings.py  ingest.py  loader.py  vector_store.py
flask_backend/: .env.example  app.py  requirements.txt
interfaces/: __init__.py
interfaces/fastapi/: __init__.py  app.py
src/: App.css  App.js  GeminiChat.jsx  IteriaApp.css  IteriaApp.jsx
