[project]
name = "iteria"
version = "0.1.0"
description = "Iteria - agentic RAG with iterative self-correction"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "spacy>=3.7,<3.9",
  "sentence-transformers>=3.0",
]

dev = [
  "ruff>=0.4",
]

[tool.uv]
# uv will create/manage a virtual environment and lockfile for reproducible installs.

[tool.ruff]
line-length = 100
